TRICKY part 1 done

--- a/TRICKY/Makefile
+++ b/TRICKY/Makefile
@@ -1,3 +1,5 @@
 all:
-	gcc -no-pie -c virus-wrapper.c
-	gcc -no-pie -o virus virus-wrapper.o virus.o
+	gcc -Os -o infect1 infect1.c
+clean:
+	rm -f *.o infect1 target1.exe
+	cp ../target1.exe .
