--- a/TRICKY/Makefile
+++ b/TRICKY/Makefile
@@ -1,7 +1,7 @@
 all:
 	gcc -Os -o infect1 infect1.c
 	gcc -Os -o infect2 infect2.c
-	gcc -Os -o infect3 infect3.c
+	gcc -Os -o infect3a infect3a.c
 
 	cp ./obs/target1.exe .
 	cp ./obs/target2.exe .
@@ -10,7 +10,7 @@ all:
 infect:
 	./infect1 target1.exe
 	./infect2 target2.exe
-	./infect3 target3a.exe
+	./infect3a target3a.exe
 	
 	chmod 777 target1.exe
 	chmod 777 target2.exe
